Closed Bug 797526 Opened 11 years ago Closed 11 years ago

some assertions in nsDOMClassInfo should be fatal in debug builds

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: bjacob, Assigned: bjacob)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
      No description provided.
Attachment #667624 - Flags: review?(bzbarsky)
Assignee: nobody → bjacob
Comment on attachment 667624 [details] [diff] [review]
patch

r=me
Attachment #667624 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/6a76b682c628
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Depends on: 840260
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.