Bug 797526 - some assertions in nsDOMClassInfo should be fatal in debug builds - r=bz